Safari365 Prod/src/objects/Passenger__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Passengers</relationshipLabel>
        <relationshipName>Passengers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_From_DOB__c</fullName>
        <formula>IF(ISNULL(Date_of_Birth__c) , TEXT(Date_of_Birth__c) , TEXT(FLOOR((TODAY()-Date_of_Birth__c +1)/365.2425)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The system will calculate this based on the date of birth entered in the Members Club</inlineHelpText>
        <label>Age From Date Of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <formula>Opportunity__r.Arrival_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Celebrating_Birthday__c</fullName>
        <label>Celebrating Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Celebrating_a_wedding_anniversary__c</fullName>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Information_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Information Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_of_Residence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Sub_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Sub Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DietaryRequirements_Text__c</fullName>
        <label>Dietary Requirements Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DietaryRequirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dietary Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_First_Name__c</fullName>
        <label>Emergency First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Last_Name__c</fullName>
        <label>Emergency Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Mobile_Phone_Number__c</fullName>
        <label>Emergency Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Entitled_to_Photobook_s__c</fullName>
        <inlineHelpText>How many Photobooks is this passenger entitled to? Enter a number only</inlineHelpText>
        <label>Entitled to Photobook(s)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExistingMedicalCondition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Medical Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingMobilityIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Mobility Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Given_Age__c</fullName>
        <inlineHelpText>What age did the client give for this passenger? ( this will be used to calculate the applicable room rate)</inlineHelpText>
        <label>Given Age</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Information_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Information Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Flight_Arrival_Details__c</fullName>
        <label>International Flight Arrival Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_Flight_Departure_Details__c</fullName>
        <label>International Flight Departure Details </label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Conditions__c</fullName>
        <label>Medical Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Information_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Information Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Policy_Number__c</fullName>
        <label>Membership Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_s__c</fullName>
        <label>Middle Name(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobility_Issues__c</fullName>
        <label>Mobility Issues:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Month_of_Birthday__c</fullName>
        <formula>MONTH(Date_of_Birth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month of Birthday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_of_Residence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Passengers (New Account)</relationshipLabel>
        <relationshipName>Passengers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Birthday__c</fullName>
        <formula>IF(TODAY()&gt;DATE(YEAR(TODAY()),MONTH(Date_of_Birth__c),DAY(Date_of_Birth__c)),DATE(YEAR(TODAY())+1,MONTH(Date_of_Birth__c),DAY(Date_of_Birth__c)),DATE(YEAR(TODAY()),MONTH(Date_of_Birth__c),DAY(Date_of_Birth__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Passengers</relationshipLabel>
        <relationshipName>Passengers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Occasion__c</fullName>
        <label>Special Occasion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PassengerName__c</fullName>
        <label>PAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassengerType__c</fullName>
        <label>Passenger Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Information_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passport Information Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_details_verified_by_consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passport details verified by consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Emergency_Phone_Number__c</fullName>
        <label>Policy Emergency Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Policy Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_trip_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require trip updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Passengers (Sub Opportunity)</relationshipLabel>
        <relationshipName>Passengers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscribe_me_to_newsletter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Subscribe me to newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_End_Date__c</fullName>
        <formula>Opportunity__r.TravelEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Insurance_Policy_Number__c</fullName>
        <label>Travel Insurance Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Insurance_Policy_Provider__c</fullName>
        <label>Travel Insurance Policy Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Insurance__c</fullName>
        <label>Travel Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I have arranged my own travel insurance ( inclusive of cancellation,curtailment/lost baggage etc )</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t have travel insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiver_Of_Liability_Date__c</fullName>
        <label>Waiver Of Liability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Of_Liability_Name__c</fullName>
        <label>Waiver Of Liability Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Waiver_Of_Liability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver Of Liability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebSite_Origin_From_Parent_Account__c</fullName>
        <formula>Account__r.Website_Origin_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Origin From Parent Account</label>
        <type>Text</type>
    </fields>
    <label>Passenger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Middle_Name_s__c</columns>
        <columns>PassengerName__c</columns>
        <columns>Waiver_Of_Liability__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>p-{000000000}</displayFormat>
        <label>Passenger Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passengers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Last_Name_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>$User.ByPassValidation__c = false
&amp;&amp;
Confirmed__c=True
&amp;&amp;
ISBLANK(Last_Name__c)</errorConditionFormula>
        <errorMessage>Last Name is Mandatory if passenger is confirmed</errorMessage>
    </validationRules>
</CustomObject>